# skills

./: .gitignore  LICENSE  README.md  devenv.nix  devenv.yaml  package.json  pyproject.toml  skills.sh.json
.github/workflows/: validate.yml
scripts/: validate-skills.mjs
skills/dx/: SKILL.md
skills/dx/agents/: openai.yaml
skills/effect/: SKILL.md
skills/effect/agents/: openai.yaml
skills/effect/references/: effect.md  zio.md
skills/example-skill/: SKILL.md
skills/just-do-it/: SKILL.md
skills/just-do-it/agents/: openai.yaml
skills/line/: SKILL.md
skills/line/agents/: openai.yaml
skills/plane/: SKILL.md
skills/plane/agents/: openai.yaml
skills/point/: SKILL.md
skills/point/agents/: openai.yaml
skills/proof/: SKILL.md
skills/proof/agents/: openai.yaml
skills/simplicity/: SKILL.md
skills/simplicity/agents/: openai.yaml
skills/study/: SKILL.md
skills/study/agents/: openai.yaml
skills/testing/: SKILL.md
skills/testing/agents/: openai.yaml
skills/typesafe/: SKILL.md
skills/typesafe/agents/: openai.yaml
skills/ux/: SKILL.md
skills/ux/agents/: openai.yaml
